...
                </>
              </Pressable>
            </View>
          )}

          <View style={styles.footer}>
            <Text testID="details-hint" style={styles.footerText}>
              {t('tapDetails')}
            </Text>
          </View>
        </View>
      </>
    );
...
